<resources>
    <string name="app_name">Ccode</string>
    <string name="titleBCInputOutput">Nhập - Xuất cơ bản</string>
    <string name="titleBCDataType">Kiểu dữ liệu - Biến</string>
    <string name="titleBCOpertor">Toán tử phổ biến</string>
    <string name="titleBCCondition">Cấu trúc rẽ nhánh</string>
    <string name="titleBCLoop1">Vòng lặp (phần 1)</string>
    <string name="titleBCLoop2">Vòng lặp (phần 2)</string>
    <string name="titleBCFunction">Hàm con</string>
    <string name="titleBCArray1">Mảng 1 chiều (phần 1)</string>
    <string name="titleBCArray2">Mảng 1 chiều (phần 2)</string>
    <string name="titleBCString">Chuỗi</string>
    <string name="exp">
        <ul>
            <li>Ví dụ :</li>
        </ul>
    </string>
    <string name="conclusion">
        * <u>TỔNG KẾT:</u>
    </string>
    <string name="exampleResult">
        <ul>
            <li>Kết quả khi thực thi:</li>
        </ul>
    </string>
    <string name="BC_IO_about">
        <ul>
            <li>Trong bài này, chúng ta sẽ bắt đầu làm quen với 2 hàm
                <b>
                    <i>printf()</i>
                </b>
                và
                <b>
                    <i>scanf()</i>
                </b>
                để thực hiện các thao tác nhập xuất từ bàn phím.
            </li>
        </ul>
    </string>
    <string name="BC_IO_printf">
        * <u>Hàm printf()</u>:
    </string>
    <string name="BC_IO_example1">
        <ul>
            <li>Ví dụ 1: in dòng <b>Hello World!</b> ra màn hình</li>
        </ul>
    </string>
    <string name="BC_IO_dedangnhanthay">
        <ul>
            <li>Dễ dàng nhận thấy:</li>
        </ul>
    </string>
    <string name="BC_IO_insideDDNT1">
        - Ta có thể sử dụng hàm <b>printf()</b>
        <i>
            <font fgcolor='#FFFF3B30'>dùng để in 1 câu lệnh bất kì ra màn hình..</font>
        </i>
    </string>
    <string name="BC_IO_insideDDNT2">
        - Khai báo thư viện <b>stdio.h</b> dùng từ khóa <b>#include</b> để sử dụng các hàm nhập xuất.
    </string>
    <string name="BC_IO_insideDDNT3">
        - Cấu trúc của 1 chương trình C cơ bản gồm <b>khai báo thư viện</b>, hàm <b>int main()</b>
        và <b>return 0</b>.
    </string>
    <string name="BC_IO_example2">
        <ul>
            <li>Ví dụ 2:</li>
        </ul>
    </string>
    <string name="BC_IO_insideDDNT4">
        => <b>"\\n"</b>\t: xuống dòng.
    </string>
    <string name="BC_IO_insideDDNT5">
        => <b>"\\t"</b>\t: lùi 1 khoảng tab.
    </string>
    <string name="BC_IO_scanf">
        * <u>Hàm scanf()</u>:
    </string>
    <string name="BC_IO_example3">
        <ul>
            <li>Ví dụ 3:</li>
        </ul>
    </string>
    <string name="BC_IO_scanfAge">
        - Hàm <b>scanf()</b>
        <i>
            <font fgcolor='#FFFF3B30'>dùng để đọc dữ liệu người dùng nhập từ bàn phím.</font>
        </i>
        Ở ví dụ trên, hàm <b>scanf()</b> dùng để đọc số tuổi của người dùng nhập, sau đó hàm <b>printf()</b>
        dùng để in ra số tuổi vừa nhập sử dụng <b>%d</b>.\n\n- Dòng <b>int age</b> dùng để khai báo biến age kiểu số nguyên (integer).
        Phần này các bạn chỉ cần quan tâm hàm <b>scanf()</b>.
    </string>
    <string name="BC_IO_conclusionDetail">
        - <b>printf()</b>\t\t\: in 1 câu lệnh bất kì ra màn hình.\n
        - <b>scanf()</b>\t\t: đọc dữ liệu người dùng nhập.\n
        - <b>\\n</b>\t\t\t\t\t\t\t: xuống 1 dòng.\n
        - <b>\\t</b>\t\t\t\t\t\t\t: lùi vào 1 tab.\n
        - <b>stdio.h</b>\t\t: thư viện dùng để nhập xuất.\n
        - <b>Cấu trúc của 1 chương trình C cơ bản</b>.
    </string>
    <string name="BC_DataType_about">
        <ul>
            <li>Trong bài này, chúng ta sẽ tìm hiểu về
                <b>
                    <i>cách khai báo biến</i>
                </b>
                và
                <b>
                    <i>kiểu dữ liệu của biến</i>
                </b>
            </li>
        </ul>
    </string>
    <string name="BC_DataType_syntax">
        <font fgcolor='#B50F5C'>
                <b>*
                    <i>
                        <u>
                            Syntax (cú pháp)
                        </u>
                    </i>:
                </b>
        </font>
        <i>&lt;Kiểu dữ liệu&gt; tên biến;</i>
    </string>
    <string name="BC_DataType_expSyntax">
        -\tint a;\n-\tdouble b;\n-\tchar c;\n-\t&#8230;
    </string>
    <string name="BC_DataType_xembang">
        - 3 biến a, b, c được khai báo với các kiểu dữ liệu khác nhau (int, double, char). Xem bảng bên dưới để biết thêm
        <i>
            <font fgcolor='#FFFF3B30'>những kiểu dữ liệu phổ biến</font>
        </i>
        trong lập trình C nhé!
    </string>
    <string name="BC_DataType_popular">
        * <u>Các kiểu dữ liệu phổ biến thường gặp trong C</u>:
    </string>
    <string name="BC_DataType_int">
        * <u>Kiểu int</u>:
    </string>
    <string name="BC_DataType_intDetail">
         - <b>Int</b> là chữ viết tắt của <b>Integer</b>, đây là
            <i>
                <font fgcolor='#FFFF3B30'>kiểu số nguyên âm hoặc nguyên dương và không có giá trị thập phân</font>
            </i>.
    </string>
    <string name="BC_DataType_float_double">
        * <u>Kiểu float và double</u>:
    </string>
    <string name="BC_DataType_float_double_detail">
        - Đây là
            <i>
                <font fgcolor='#FFFF3B30'>kiểu số thực, dùng để chứa những số có dấu phẩy động.</font>
            </i>
        Ví dụ 2.5 và 5.6 là những số thực.\n
        - Câu hỏi đặt ra là sự khác nhau giữa float và double là gì?
        Về tính chất thì cả hai giống nhau, chỉ khác nhau về kích thước như sau:\n\t\t

         <ul>
            <li>
                <b>
                    <i>float có kích thước 4 bytes</i>
                </b>
            </li>
        </ul>
        \n\t\t
                 <ul>
            <li>
                <b>
                    <i>double có kích thước 8 bytes</i>
                </b>
            </li>
        </ul>

    </string>
    <string name="BC_DataType_char">
        * <u>Kiểu char</u>:
    </string>
    <string name="BC_DataType_charDetail">
        - Kiểu char rất đặt biệt, nó
            <i>
                <font fgcolor='#FFFF3B30'>dùng để lưu trữ một ký tự bất kì, và ký tự đó phải ở định dạng chuỗi.</font>
            </i>
        \n- Vì vậy khi gán giá trị cho nó ta
        <u>
            phải dùng dấu nháy để bao quanh ký tự cần gán lại
        </u>(Vd: char kytu1 = \'a\', char kytu2 = \'x\').
    </string>
    <string name="BC_DataType_void">
        * <u>Kiểu void</u>:
    </string>
    <string name="BC_DataType_voidDetail">
         - Đây là kiểu dữ liệu khá đặt biệt, nó có ý nghĩa không là gì cả,
            <i>
                <font fgcolor='#FFFF3B30'>thường được dùng trong những function (hàm) không có giá trị trả về</font>
            </i>
        . Vấn đề này chúng ta sẽ học ở những bài tiếp theo nhé.
    </string>
    <string name="BC_DataType_short_long">
        * <u>Kiểu short và long</u>:
    </string>
    <string name="BC_DataType_long_Detail">
         - Nếu bạn muốn
            <i>
                <font fgcolor='#FFFF3B30'>lưu trữ một con số rất lớn</font>
            </i>
        và kiểu dữ liệu hiện tại không đáp ứng được thì hãy thêm từ khóa long vào lúc khai báo nhé. Ví dụ:
        <b>long</b> a;
        <b>long long</b> b;
        <b>long double</b> c;
    </string>
    <string name="BC_DataType_short_Detail">
         - Còn nếu bạn chắc chắn
            <i>
                <font fgcolor='#FFFF3B30'>số nguyên lưu trữ sẽ rất nhỏ nên không cần phải phí phạm kích thước thì hãy sư dụng từ khóa
                    <b>short</b> nhé. Ví dụ: <b>short</b> a.
                </font>
            </i>
    </string>
    <string name="BC_DataType_descipt_result">
        - Vì b và c là kiểu số thực nên hệ thống sẽ in ra màn hình dưới dạng số thực (có dấu phẩy).\n
        - Gán biến <b>kytu = \'H\'</b> nên hệ thống in ra H mà không cần nhập.\n
        - Lưu ý: sử dụng dấu
        <b>\"\/\/\" để comment 1 dòng hoặc \"/*Đoạn code cần comment...*/\" để comment nhiều dòng lệnh </b>
        không cần thiết lại (hoặc dùng để chú thích code), việc comment này rất quan trọng.
        <b>Giúp code tường minh hơn, người viết lâu quên và người đọc dễ hiểu code (clean code).</b>
    </string>
    <string name="BC_DataType_conclusion">
         - Trên là danh sách các kiểu dữ liệu thường dùng trong ngôn ngữ C, bạn phải nhớ kích thước và công dụng
        của từng kiểu để sau này sử dụng cho phù hợp nhé. Ví dụ muốn lưu trữ số nguyên thì dùng kiểu int, số
        thực thì kiểu float hoặc double, ký tự thì kiểu char.\n
        - Vẫn còn một số kiểu nâng cao nữa như: Mảng, Pointer, Structures nhưng ta sẽ học nó ở những bài nâng cao.
    </string>
    <string name="BC_operator_about">

        <ul>
            <li>Trong bài này, chúng ta sẽ tìm hiểu về
                <b>
                    <i>toán tử</i>
                </b>
                và
                <b>
                    <i>cách hoạt động của nó. Một toán tử là một ký hiệu yêu cầu
                        trình biên dịch thực hiện các chức năng toán học hoặc logic cụ thể.</i>
                </b>
                Ngôn ngữ C có nhiều toán tử cài sẵn và cung cấp các loại toán tử sau:
            </li>
        </ul>
    </string>
    <string name="BC_operator_4operator">

        <font fgcolor='#FFFF3B30'>

        <ul>
            <li>\tToán tử số học (Arithmetic Operators).
            </li>
        </ul>

        \n
        <ul>
            <li>\tToán tử quan hệ (Relational Operators).
            </li>
        </ul>

        \n
        <ul>
            <li>\tToán tử logic (Logical Operators).
            </li>
        </ul>

        \n
        <ul>
            <li>\tToán tử thay thế (Assignment Operators).
            </li>
        </ul>

        </font>
    </string>
    <string name="BC_operator_ab">
        - Nếu biến <i>A có giá trị là 10</i>, <i>biến B có giá trị là 20</i> thì kết quả sau khi sử dụng các toán tử sẽ như thế nào?
        Mời các bạn theo dõi các khái niệm và ví dụ cụ thế dưới đây:
    </string>
    <string name="BC_operator_Arithmetic">
        * <u>Toán tử số học (Arithmetic Operators)</u>:
    </string>
    <string name="BC_operator_Relational">
        * <u>Toán tử quan hệ (Relational Operators)</u>:
    </string>
    <string name="BC_operator_Logical">
        * <u>Toán tử logic (Logical Operators)</u>:
    </string>
    <string name="BC_operator_Assignment">
        * <u>Toán tử thay thế (Assignment Operators)</u>:
    </string>
    <string name="BC_operator_arithmetic_detail">
        - Ta có thể dễ dàng sử dụng toán tử bất kì để tính toán và đưa ra kết quả như ý muốn.\n\n
        - Tuy nhiên dòng 14 15 và 17 18 có chút đặc biệt khi sử dụng 2 toán tử ++ và --. Tại sao dòng 14 15 giá trị của a, b
        không thay đổi mặc dù đã ++ và --, còn dòng 17 18 giá trị a lại tăng thêm 2 mặc dù chỉ dùng 1 lần toán tử ++, b cũng
        tương tự như vậy?\n\n
        - <b><u>Giái thích</u>:</b>
        <i>
            <font
                fgcolor='#FFFF3B30'>a++ và ++a là hoàn toàn khác nhau.
            </font>
        </i>
         Dòng 14 dùng a++ thì chương trình sẽ in ra màn hình trước (lúc này biến a vẫn là 40) rồi sau đó mới thực hiện phép toán a++ (lúc này biến a = 41).
         Dòng 17 dùng ++a thì chương trình sẽ thực hiện phép toán ++a trước (lúc này a đang 41 thực hiện cộng 1 thì a = 42) rồi
        sau đó mới in ra màn hình (a = 42).
           <i>
            <font
                fgcolor='#FFFF3B30'>Tóm lại a++ thì chương trình sẽ thực hiện phép toán ++ sau cùng (in ra màn hình rồi mới cộng), ngược lại ++a thì sẽ được ưu
                tiên thực hiện phép toán trước tiên (cộng xong rồi mới in ra màn hình).
            </font>
        </i>
        \n\n- Tương tự với toán tử --.
    </string>
</resources>