<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailBasicCourse.InputOutput"
    android:background="@color/white">

    <include
        android:id="@+id/toolBar_DetailStudy"
        layout="@layout/toolbar_detail_study"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBar_DetailStudy"
        tools:ignore="UnknownId"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_about"
                android:textSize="17sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_syntax"
                android:textSize="17sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exp"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_expSyntax"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_xembang"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/bc_dtt_table_dtt" />

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_popular"
                android:textStyle="bold|italic"
                android:textAllCaps="true"
                android:textSize="17sp"
                android:textColor="@color/highlight"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_int"
                android:textStyle="bold|italic"
                android:textSize="17sp"
                android:textColor="@color/highlight"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_intDetail"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_float_double"
                android:textStyle="bold|italic"
                android:textSize="17sp"
                android:textColor="@color/highlight"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_float_double_detail"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_char"
                android:textStyle="bold|italic"
                android:textSize="17sp"
                android:textColor="@color/highlight"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_charDetail"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_void"
                android:textStyle="bold|italic"
                android:textSize="17sp"
                android:textColor="@color/highlight"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_voidDetail"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_short_long"
                android:textStyle="bold|italic"
                android:textSize="17sp"
                android:textColor="@color/highlight"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_long_Detail"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_short_Detail"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exp"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/bc_dtt_exp"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exampleResult"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:scaleType="fitXY"
                android:src="@drawable/bc_ddt_exp_result"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_descipt_result"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conclusion"
                android:textStyle="bold|italic"
                android:textSize="17sp"
                android:textColor="@color/highlight"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_DataType_conclusion"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:background="#CFD8D8"/>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>