<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailBasicCourse.InputOutput"
    android:background="@color/white">

    <include
        android:id="@+id/toolBar_DetailStudy"
        layout="@layout/toolbar_detail_study"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBar_DetailStudy"
        tools:ignore="UnknownId"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt1"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_IO_about"
                android:textSize="17sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_IO_printf"
                android:textStyle="bold|italic"
                android:textSize="17sp"
                android:textColor="@color/highlight"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_IO_example1"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="197dp"
                android:src="@drawable/bc_io_helloworld" />

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exampleResult"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bc_io_helloworld_result"/>


            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_IO_dedangnhanthay"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_IO_insideDDNT1"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_IO_insideDDNT2"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_IO_insideDDNT3"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_IO_example2"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="197dp"
                android:src="@drawable/bc_io_tab_xuongdong"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exampleResult"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bc_io_tab_xuongdong_result"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_IO_insideDDNT4"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_IO_insideDDNT5"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_IO_scanf"
                android:textStyle="bold|italic"
                android:textSize="17sp"
                android:textColor="@color/highlight"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_IO_example1"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="fitXY"
                android:src="@drawable/bc_io_scanf_age"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exampleResult"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bc_io_scanf_age_result"/>

            <TextView
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_IO_scanfAge"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conclusion"
                android:textStyle="bold|italic"
                android:textSize="17sp"
                android:textColor="@color/highlight"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BC_IO_conclusionDetail"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:background="#CFD8D8"/>






        </LinearLayout>

    </ScrollView>

</RelativeLayout>